tests/sources/invalid/classes/constructor_param_array_unsupported.fire
// Parser error: constructor parameter with an array type, which is not
// supported for class methods/constructors.

class Foo {
    x: int32;

    fn Foo(xs: int32[]) {  //~ ERROR FS-PARSE-0012 @16
        this.x = xs[0];  //~ ERROR FS-PARSE-0003 @9
//~^ ERROR FS-PARSE-0003 @18
    }
}
